# data-hub-ui-starter-kit

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/api/: function_app.py  local.settings.json  local.settings.json.example  requirements.txt
app/api/get_results/: __init__.py  init.py
app/api/get_status/: init.py
app/api/shared/: __init__.py  auth.py  sas.py  storage.py
app/api/upload_initiate/: init.py
app/backend/: .env.example  auth.py  config.py  main.py  requirements.txt
app/backend/routes/: images.py  upload.py
app/backend/services/: blob_service.py  metadata_service.py
app/demo/: requirements.txt  server.py
app/frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/frontend/public/: staticwebapp.config.json
app/frontend/src/: App.css  App.tsx  DemoApp.tsx  index.tsx  main.tsx  react-app-env.d.ts  types.ts
app/frontend/src/components/ImageDetail/: DemoImageDetail.tsx  ImageDetail.tsx
app/frontend/src/components/ImageGallery/: DemoImageGallery.tsx  ImageGallery.tsx
app/frontend/src/components/Status/: StatusBadge.tsx
app/frontend/src/services/: api.ts  auth.ts  demoApi.ts
docs/: STARTER-CODEBASE.md  architecture-ui.md  getting-started.md  phase1-handover.md  security.md  starter-codebase.md  ui-handover.md
infra/: README.md  main.bicep  main.bicepparam  main.json
infra/modules/: function-app.bicep  monitoring.bicep  networking.bicep  security.bicep  static-web-app.bicep  storage.bicep
scripts/: run-demo.ps1
(+2 files in other folders)
