[project]
name = "datahub-ui-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=2.0.0",
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.28.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "uvicorn>=0.44.0",
    "xlrd>=2.0.2",
]
